# lgl

./: .gitignore  Makefile  README  linear-graphs.cabal
Data/Graph/: ContainersGraph.hs  GHCGraph.lhs  Linear.hs
Data/Graph/Linear/: Basic.hs  Graph.hs  Representation.hs  SCC.hs
Data/Graph/Linear/Query/: BCC.hs  DFS.hs  SCC.hs  Util.hs
Data/Graph/Linear/Representation/: Array.hs  HashMap.hs  Map.hs  Vector.hs
Frozen/: ContainersGraph.hs
GraphSCC-1.0.2/Data/Graph/: ArraySCC.hs
Util/: Bench.hs  Dense.hs  Profile.hs  Random.hs  Sparse.hs  Suite.hs  Test.hs  Util.hs
bench/: Bench.hs  Main.hs  Makefile  Profile.hs  Random.hs  Sparse.hs  Util.hs  dense.hs  out.csv  rand.hs
bench/frozen/: ArraySCC.hs  Digraph.lhs  GraphSCC.hs
bench/runs/1/: notes  out  out.html
bench/runs/2/: notes  out.csv  out.html
bench/runs/3/: notes
test/: example.lhs
