name:                 linear-graphs
version:              0.0.0.1
license:              BSD3
license-file:         LICENSE
author:               
maintainer:           libraries@haskell.org
bug-reports:          LINK_TO_TRAC
synopsis:             Space-time efficient linear graph algorithms
category:             Algorithms
description:
        This package contains efficient implementations of various generic
        graph traversals, including breadth- and depth- first search, computation
        of strongly connected components,  bi-connected components and edge
        classification. Each operation is implemented as a state-transformer
        ensuring linear time space and runtime (bounded within the size of the
        graph).
build-type:           Simple
cabal-version:        >=1.6

flag use-map
  default: False
  description: Use IntMap as the non-destructive update underlying data store for graph traversals.

flag use-vector
  default: False
  description: Use Unboxed Vector as the unboxed underlying data store for graph traversals.

Library
    build-depends: base, array, containers, vector, primitive

    extensions: RankNTypes

    exposed-modules:
      Data.Graph.Linear
      Data.Graph.Linear.Graph
      Data.Graph.Linear.Query.BCC
      Data.Graph.Linear.Query.SCC
      Data.Graph.Linear.Query.Util
      Data.Graph.Linear.Representation.Array
      Data.Graph.Linear.Representation.Vector

    extensions: CPP

    ghc-options: -O2 -Wall

    if flag(use-map)
      other-modules: Data.Graph.Linear.Representation.Map
      cpp-options: -DUSE_MAP
    else
      if flag(use-vector)
        cpp-options: -DUSE_VECTOR
      else
        cpp-options: -DUSE_ARRAY

source-repository head
    type:     git
    location: http://github.com/raeez/linear-graphs/
